# arbiter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  STRATEGIES.md  pyproject.toml
.github/workflows/: ci.yml  secrets-check.yml
arbiter/: __init__.py  __main__.py  config.py  health.py  main.py  scheduler.py
arbiter/alerts/: __init__.py  base.py  discord.py  sms.py  stdout.py
arbiter/db/: models.py  (+2 more)
notebooks/: anchor_backtest.ipynb  anchor_strategy_guide.ipynb  kalshi_market_analysis.ipynb  maker_data_analysis.ipynb  model_calibration_fixes.ipynb
scripts/: analyze_categories.py  analyze_mispricings.py  backfill_candles.py  backfill_outcomes.py  backtest_ev.py  collect_orderbooks.py  collect_training_data.py  debug_kalshi.py  evaluate_anchor_calibration.py  export_snapshots.py  fetch_bls_data.py  fetch_candlestick_prices.py  fetch_fred_data.py  fit_anchor_calibrators.py  reset_db.py  scan_violations.py
tests/: conftest.py  test_alerts.py  test_anchor.py  test_backfill.py  test_backtesting.py  test_collector.py  test_config.py  test_consistency.py  test_data_collector.py  test_dataset.py  test_db.py  test_evaluate.py  test_export.py  test_features.py  test_fees.py  test_health.py  test_historical_analysis.py  test_integration.py  test_kalshi.py  test_lgbm.py  test_maker_data_models.py  test_matcher.py  test_paper_trading.py  test_pipeline_audit.py  test_polymarket.py  test_providers.py  test_rate_limiter.py  test_retention.py  test_scheduler.py  test_scoring.py  test_strategy.py  test_train.py  test_training_historical.py
(+38 files in other folders)
