[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arbiter"
version = "0.1.0"
description = "Automated prediction market scanner for Kalshi and Polymarket"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "lightgbm>=4.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "aiosqlite>=0.20",
]
sms = ["twilio>=9.0"]
llm = ["anthropic>=0.40"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "lightgbm.*"]
ignore_missing_imports = true